@@ -1,3 +1,9 @@
+2001-04-12  Christian Stimming  <stimming@tuhh.de>
+
+	* src/scm/report/account-piecharts.scm: Added menu tips, menu
+	names. Use Reportname option for report title. Added an explanatory 
+	text (only for devel info, will be removed again in some weeks).
+
 2001-04-12  Robert Graham Merkel  <rgmerk@mira.net>
 
 	* src/engine/Transaction.[ch] (xaccSplitGetCorrAccountFullName): new
